Use clearfix instead of overflow:hidden to ensure bubbles show

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -24,7 +24,11 @@ header {
 
 .full-width {
     width: 100%;
-    overflow: hidden;
+}
+
+.full-width:after {
+    content: "";
+    display: table;
 }
 
 #workshop-lecturer,
